# uhctf2022

challenges/EyeP/: readme.md
challenges/EyeP/attachments/: rtsp_setup.pcapng
challenges/EyeP/deployment/: readme.md
challenges/EyeP/solution/: crack.py  crack2.py
challenges/enhance/: readme.md
challenges/fontlocker/: readme.md
challenges/grandmas_challenge/: Dockerfile  readme.md
challenges/imagine/: deploy.sh  readme.md
challenges/in_the_zone/: readme.md
challenges/kve/: readme.md
challenges/lazy_formatting_pt_1/: Dockerfile  docker-compose.yml  readme.md
challenges/lazy_formatting_pt_2/: readme.md
challenges/magical_shipping_inc/: compile.sh  readme.md
challenges/minimal-effort/: readme.md
challenges/nanflags/: readme.md
challenges/nanflags/deployment/backend/: Cargo.toml  Rocket.toml  add_community_repo.sh
challenges/nanflags/deployment/backend/src/: login.rs  main.rs  recovery.rs
challenges/number_recycling/: create_distributable.sh  readme.md
challenges/oracle_of_uhasselt/: Dockerfile  default.env  readme.md  rustpad_script.sh
challenges/persistence_is_key/: readme.md
challenges/sequelbetter/: .gitattributes  Dockerfile  README.2.md  README.md  README.old.md  build.sh  run.sh
challenges/signum_paranoia/: Dockerfile  default.env  readme.md
challenges/strange_message/: readme.md
challenges/uhctf_bot/: Dockerfile  default.env  readme.md  select_white_box_files.sh
challenges/warm-up-1/: readme.md
challenges/with_the_flow/: Dockerfile  readme.md
challenges/xssupload/: docker-compose.yml
resources/: flag_format.md
(+167 files in other folders)
