[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.rocket]
version = "0.4"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["serve", "json"]

[dependencies.chrono]
version = "0.4.19"

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]